@@ -1,3 +1,7 @@
+2008-05-23  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* haskell-cabal.el (haskell-cabal-find-file): Ignore directories.
+
 2008-05-12  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* inf-haskell.el (inferior-haskell-spot-prompt): New function.
